--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,25 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div class="rr-container">
+  <div class="rr-page-header">
+    <h1 class="rr-app-title">
+      Rock & Roll
+      <small class="rr-subtitle">
+        with Ember.js
+      </small>
+    </h1>
+  </div>
+  <div class="rr-main-content">
+    <ul class="list pa0 ma0">
+      {{#each this.model as |song|}}
+        <li>
+          {{song.title}}
+          <em>
+            {{song.band}}
+          </em>
+          <span class="rating fr">
+            {{song.rating}}
+          </span>
+        </li>
+      {{/each}}
+    </ul>
+  </div>
+</div>
