--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,8 @@
+:root {
+  --bright-yellow: #ffda00;
+  --navitem-link-color: var(--bright-yellow);
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -11,6 +16,36 @@ a {
 
 .rr-container::after {
   clear: both;
+}
+
+.rr-navbar {
+  position: relative;
+  min-height: 50px;
+  border: 1px solid transparent;
+}
+
+.rr-navbar > .rr-nav {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.rr-navbar-item {
+  padding: 5px;
+}
+
+.rr-navbar-item > a:hover {
+  border-bottom: 2px solid var(--navitem-link-color);
+}
+
+.rr-navbar-item > a.active {
+  color: inherit;
+  border-bottom: 2px solid var(--navitem-link-color);
+}
+
+.rr-navbar-item + .rr-navbar-item {
+  margin-left: 10px;
 }
 
 @media screen and (min-width: 60em) and (max-width: 100em) {
