--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,18 +8,20 @@
     </h1>
   </div>
   <div class="rr-main-content">
-    <ul class="list pa0 ma0">
-      {{#each this.model as |song|}}
-        <li>
-          {{song.title}}
-          <em>
-            {{song.band}}
-          </em>
-          <span class="rating fr">
-            {{song.rating}}
-          </span>
+    <nav class="rr-navbar" role="navigation">
+      <ul class="rr-nav">
+        <li class="rr-navbar-item">
+          <LinkTo @route="bands">
+            Bands
+          </LinkTo>
         </li>
-      {{/each}}
-    </ul>
+        <li class="rr-navbar-item">
+          <LinkTo @route="songs">
+            Songs
+          </LinkTo>
+        </li>
+      </ul>
+    </nav>
+    {{outlet}}
   </div>
 </div>
