--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -16,15 +16,39 @@
     {{/each}}
   </ul>
   <div class="rr-new-label">
-    <button
-      type="button"
-      class="avenir bn bg-transparent near-white"
-      data-test-rr="new-band-label"
-      {{on "click" this.addBand}}
-    >
-      {{fa-icon "plus"}}
-      Add new band
-    </button>
+    {{#if this.isAddingBand}}
+      <Input
+        @type="text"
+        class="rr-input"
+        placeholder="New Band"
+        @value={{this.newBandName}}
+        {{on "click" this.addBand}}
+      />
+      <button
+        type="button"
+        class="rr-action-button"
+        {{on "click" this.saveBand}}
+      >
+        Add
+      </button>
+      <button
+        type="button"
+        class="rr-cancel-icon"
+        {{on "click" this.cancelAddBand}}
+      >
+        {{fa-icon "times"}}
+      </button>
+    {{else}}
+      <button
+        type="button"
+        class="avenir bn bg-transparent near-white"
+        data-test-rr="new-band-label"
+        {{on "click" this.addBand}}
+      >
+        {{fa-icon "plus"}}
+        Add New Band
+      </button>
+    {{/if}}
   </div>
 </div>
 <div class="rr-main-panel">
