--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -17,28 +17,29 @@
   </ul>
   <div class="rr-new-label">
     {{#if this.isAddingBand}}
-      <Input
-        @type="text"
-        @value={{this.newBandName}}
-        class="rr-input"
-        placeholder="New Band"
-        {{on "click" this.addBand}}
-      />
-      <button
-        type="button"
-        class="rr-action-button"
-        disabled={{this.isAddButtonDisabled}}
-        {{on "click" this.saveBand}}
-      >
-        Add
-      </button>
-      <button
-        type="button"
-        class="rr-cancel-icon"
-        {{on "click" this.cancelAddBand}}
-      >
-        {{fa-icon "times"}}
-      </button>
+      <form class="rr-inline-form" {{on "submit" saveBand}}>
+        <Input
+          @type="text"
+          @value={{this.newBandName}}
+          class="rr-input"
+          placeholder="New Band"
+          {{on "click" this.addBand}}
+        />
+        <button
+          type="button"
+          class="rr-action-button"
+          disabled={{this.isAddButtonDisabled}}
+        >
+          Add
+        </button>
+        <button
+          type="button"
+          class="rr-cancel-icon"
+          {{on "click" this.cancelAddBand}}
+        >
+          {{fa-icon "times"}}
+        </button>
+      </form>
     {{else}}
       <button
         type="button"
