--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -10,7 +10,48 @@
     <li class="tc">
       No
       {{this.model.name}}
-      songs yet.
+      songs yet, why don't you
+      <a href="#" {{on "click" this.addSong}}>
+        create one?
+      </a>
     </li>
   {{/each}}
 </ul>
+<div class="rr-new-label">
+  {{#if this.isAddingSong}}
+    <form class="rr-inline-form" {{on "submit" this.saveSong}}>
+      <Input
+        @type="text"
+        @value={{this.newSongTitle}}
+        class="rr-input"
+        placeholder="New Song"
+      />
+      <div class="rr-inline-form-group ml-auto">
+        <button
+          type="submit"
+          class="rr-action-button"
+          disabled={{this.isAddButtonDisabled}}
+        >
+          Add
+        </button>
+        <button
+          type="button"
+          class="rr-cancel-icon"
+          {{on "click" this.cancelAddSong}}
+        >
+          {{fa-icon "times"}}
+        </button>
+      </div>
+    </form>
+  {{else}}
+    <button
+      type="button"
+      class="avenir bn bg-transparent near-white"
+      data-test-rr="new-song-label"
+      {{on "click" this.addSong}}
+    >
+      {{fa-icon "plus"}}
+      Add New Song
+    </button>
+  {{/if}}
+</div>
