create rating-star component and create its template and logic to render stars

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -3,7 +3,7 @@
     <li class="rr-list-item">
       {{song.title}}
       <span class="rr-rating fr">
-        {{song.rating}}
+        <RatingStar class="fr" @rating={{song.rating}} />
       </span>
     </li>
   {{else}}
