change "star-0" to "star-o"

--- a/app/templates/components/rating-star.hbs
+++ b/app/templates/components/rating-star.hbs
@@ -3,7 +3,7 @@
     {{#if star.isFull}}
       {{fa-icon "star"}}
     {{else}}
-      {{fa-icon "star-0"}}
+      {{fa-icon "star-o"}}
     {{/if}}
   </button>
 {{/each}}
