--- a/app/templates/components/rating-star.hbs
+++ b/app/templates/components/rating-star.hbs
@@ -1,9 +1,13 @@
-{{#each this.stars as |star|}}
-  <button type="button" class="rating-star">
-    {{#if star.isFull}}
-      {{fa-icon "star"}}
-    {{else}}
-      {{fa-icon "star-o"}}
-    {{/if}}
-  </button>
-{{/each}}
+{{#if hasBlock}}
+  {{yield stars}}
+{{else}}
+  {{#each this.stars as |star|}}
+    <button type="button" class="rating-star">
+      {{#if star.isFull}}
+        {{fa-icon "star"}}
+      {{else}}
+        {{fa-icon "star-o"}}
+      {{/if}}
+    </button>
+  {{/each}}
+{{/if}}
