add mark up to details template and use redirect hook in bands.band.details route

--- a/app/templates/bands/band/details.hbs
+++ b/app/templates/bands/band/details.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<section class="rr-panel b--solid br1 bw1">
+  <h3>
+    Description
+  </h3>
+  <p class="lh-copy">
+    {{this.model.description}}
+  </p>
+</section>
