- add ember-cli-mirage - create api endpoints for "/bands" and "/bands/:id" - create acceptance-test for bands - use ember-cli-mirage in bands' acceptance-test

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -13,6 +13,12 @@
   --button-disabled-color: var(--light-blue);
 }
 
+#ember-testing-container {
+  font-family: "avenir next", avenir, sans-serif;
+  color: var(--near-white);
+  background-color: var(--mid-grey) !important;
+}
+
 a {
   color: inherit;
   text-decoration: none;
