create test for band creation flow

--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -19,12 +19,12 @@
           @value={{this.newBandName}}
           class="rr-input"
           placeholder="New Band"
-          {{on "click" this.addBand}}
         />
         <button
           type="button"
           class="rr-action-button"
           disabled={{this.isAddButtonDisabled}}
+          {{on "click" this.saveBand}}
         >
           Add
         </button>
