--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -1,8 +1,13 @@
 <div class="rr-sidebar">
   <ul class="rr-list">
     {{#each this.model as |band|}}
-      <li class="rr-list-item">
-        <LinkTo @route="bands.band" @model={{band.id}} class="rr-band-link">
+      <li class="rr-list-item" data-test-rr="band-list-item">
+        <LinkTo
+          @route="bands.band"
+          @model={{band.id}}
+          class="rr-band-link"
+          data-test-rr="band-link"
+        >
           {{band.name}}
           <span class="rr-pointer">
             {{fa-icon "angle-right"}}
@@ -19,11 +24,13 @@
           @value={{this.newBandName}}
           class="rr-input"
           placeholder="New Band"
+          data-test-rr="new-band-input"
         />
         <button
           type="button"
           class="rr-action-button"
           disabled={{this.isAddButtonDisabled}}
+          data-test-rr="new-band-button"
           {{on "click" this.saveBand}}
         >
           Add
