write a test for "setRating" action to verify that when clicked it renders expected number of stars

--- a/app/templates/components/rating-star.hbs
+++ b/app/templates/components/rating-star.hbs
@@ -5,6 +5,7 @@
   <button
     type="button"
     class="rating-star"
+    data-test-rr={{concat "rating-star-" star.rating}}
     {{on "click" (fn this.setRating star.rating)}}
   >
     {{#if star.isFull}}
