sort songs by rating and title

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,5 +1,5 @@
 <ul class="rr-list">
-  {{#each this.model.songs as |song|}}
+  {{#each this.sortedSongs as |song|}}
     <li class="rr-list-item" data-test-rr="song-list-item">
       {{song.title}}
       <span class="rr-rating fr">
