Filter songs by a search term - create a test to check the flow of searching a song - create a "searchTerm" property on "controller:songs" to track the value of the search field - create a search panel in "template:songs" - create a computed property "matchingSongs" which uses "searchTerm" property on the controller and filters through songs in the model to return search results

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -37,6 +37,17 @@
       {{fa-icon "angle-up"}}
     </button>
   </div>
+  <div class="rr-search-panel">
+    <Input
+      @type="text"
+      class="rr-input"
+      @value={{this.searchTerm}}
+      data-test-rr="search-box"
+    />
+    <div class="rr-search-icon">
+      {{fa-icon "search"}}
+    </div>
+  </div>
 </div>
 <ul class="rr-list">
   {{#each this.sortedSongs as |song|}}
