--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,41 +1,41 @@
 <div class="rr-controls-panel">
   <div class="rr-sort-panel">
-    <button
-      type="button"
+    <LinkTo
+      @query={{hash s="ratingDesc"}}
       class="rr-sort-button"
       data-test-rr="sort-by-rating-desc"
-      {{on "click" (fn this.updateSortBy "ratingDesc")}}
+      {{!-- {{on "click" (fn this.updateSortBy "ratingDesc")}} --}}
     >
       Rating
       {{fa-icon "angle-down"}}
-    </button>
-    <button
-      type="button"
+    </LinkTo>
+    <LinkTo
+      @query={{hash s="ratingAsc"}}
       class="rr-sort-button"
       data-test-rr="sort-by-rating-asc"
-      {{on "click" (fn this.updateSortBy "ratingAsc")}}
+      {{!-- {{on "click" (fn this.updateSortBy "ratingAsc")}} --}}
     >
       Rating
       {{fa-icon "angle-up"}}
-    </button>
-    <button
-      type="button"
+    </LinkTo>
+    <LinkTo
+      @query={{hash s="titleDesc"}}
       class="rr-sort-button"
       data-test-rr="sort-by-title-desc"
-      {{on "click" (fn this.updateSortBy "titleDesc")}}
+      {{!-- {{on "click" (fn this.updateSortBy "titleDesc")}} --}}
     >
       Title
       {{fa-icon "angle-down"}}
-    </button>
-    <button
-      type="button"
+    </LinkTo>
+    <LinkTo
+      @query={{hash s="titleAsc"}}
       class="rr-sort-button"
       data-test-rr="sort-by-title-asc"
-      {{on "click" (fn this.updateSortBy "titleAsc")}}
+      {{!-- {{on "click" (fn this.updateSortBy "titleAsc")}} --}}
     >
       Title
       {{fa-icon "angle-up"}}
-    </button>
+    </LinkTo>
   </div>
   <div class="rr-search-panel">
     <Input
