use "capitalize" helper functions in controller:songs and router.js

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -91,7 +91,7 @@
         @type="text"
         @value={{this.newSongTitle}}
         class="rr-input"
-        placeholder="New Song"
+        placeholder={{this.newSongTitle}}
         data-test-rr="new-song-input"
       />
       <div class="rr-inline-form-group ml-auto">
