enable validation checks  for email and password fields

--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -4,25 +4,37 @@
   </h3>
   <form {{on "submit" this.signUp}}>
     <div class="rr-form-row-inline">
+      {{#if this.showErrors.email}}
+        <div class="rr-form-field-error" data-test-rr="email-error">
+          {{v-get model "email" "message"}}
+        </div>
+      {{/if}}
       <label for="email">
         Email
       </label>
       <Input
         @type="email"
-        @value={{this.email}}
+        @value={{this.model.email}}
         class="rr-input ml-auto"
         id="email"
+        {{on "blur" (fn this.setShowErrors "email")}}
       />
     </div>
     <div class="rr-form-row-inline">
+      {{#if this.showErrors.password}}
+        <div class="rr-form-field-error" data-test-rr="password-error">
+          {{v-get model "password" "message"}}
+        </div>
+      {{/if}}
       <label for="password">
         Password
       </label>
       <Input
         @type="password"
-        @value={{this.password}}
+        @value={{this.model.password}}
         class="rr-input ml-auto"
         id="password"
+        {{on "blur" (fn this.setShowErrors "password")}}
       />
     </div>
     <div class="rr-form-footer">
