add "autocomplete" attribute to password fields

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -23,6 +23,7 @@
         @value={{this.password}}
         class="rr-input ml-auto"
         id="password"
+        autocomplete="password"
       />
     </div>
     <div class="rr-form-footer">
