--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -34,6 +34,7 @@
         @value={{this.model.password}}
         class="rr-input ml-auto"
         id="password"
+        autocomplete="password"
         {{on "blur" (fn this.setShowErrors "password")}}
       />
     </div>
