--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -131,6 +131,7 @@ a {
   border-style: solid;
   border-width: 1px;
   padding: 0.25rem;
+  width: 100%;
 }
 
 .rr-action-button {
@@ -178,7 +179,7 @@ a {
 
 .rr-page-header {
   padding-bottom: 9px;
-  margin: 40px 0 20px;
+  margin: 40px 20px;
   border-bottom: 1px solid;
   display: flex;
   align-items: center;
@@ -255,16 +256,20 @@ a {
 
 .rr-form-container {
   margin-top: 2em;
+  padding: 0 20px;
   margin-left: auto;
   margin-right: auto;
+  max-width: 350px;
 }
 
 .rr-form-row-inline {
+  width: 100%;
   margin-bottom: 1em;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: space-between; */
 }
 
 .rr-button-panel {
