disable form submission when input fields in sign-up page is invalid

--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -44,6 +44,7 @@
           type="submit"
           class="rr-action-button"
           data-test-rr="sign-up-button"
+          disabled={{v-get this.model "isInvalid"}}
         >
           Sign up
         </button>
