--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -12,7 +12,13 @@
         @value={{this.email}}
         class="rr-input ml-auto"
         id="email"
+        {{on "blur" (fn this.setShowErrors "email")}}
       />
+      {{#if this.showErrors.email}}
+        <div class="rr-form-field-error" data-test-rr="email-error">
+          {{v-get this "email" "message"}}
+        </div>
+      {{/if}}
     </div>
     <div class="rr-form-row-inline">
       <label for="password">
@@ -24,7 +30,13 @@
         class="rr-input ml-auto"
         id="password"
         autocomplete="password"
+        {{on "blur" (fn this.setShowErrors "password")}}
       />
+      {{#if this.showErrors.password}}
+        <div class="rr-form-field-error" data-test-rr="password-error">
+          {{v-get this "password" "message"}}
+        </div>
+      {{/if}}
     </div>
     <div class="rr-form-footer">
       <div class="rr-button-panel">
