change "Sign in" text to "Log In"

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -45,7 +45,7 @@
           class="rr-action-button"
           data-test-rr="login-button"
         >
-          Sign in
+          Log In
         </button>
       </div>
       <div class="rr-cta">
