disable "Log In" button if input fields are empty or have validation errors

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -44,6 +44,7 @@
           type="submit"
           class="rr-action-button"
           data-test-rr="login-button"
+          disabled={{v-get this "isInvalid"}}
         >
           Log In
         </button>
