--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,41 +1,39 @@
 <div class="rr-controls-panel">
   <div class="rr-sort-panel">
-    <LinkTo
-      @query={{hash s="ratingDesc"}}
-      class="rr-sort-button"
-      data-test-rr="sort-by-rating-desc"
-      {{!-- {{on "click" (fn this.updateSortBy "ratingDesc")}} --}}
+    <select
+      class="rr-select"
+      data-test-rr="sort-selector"
+      {{on "change" this.updateSortBy}}
     >
-      Rating
-      {{fa-icon "angle-down"}}
-    </LinkTo>
-    <LinkTo
-      @query={{hash s="ratingAsc"}}
-      class="rr-sort-button"
-      data-test-rr="sort-by-rating-asc"
-      {{!-- {{on "click" (fn this.updateSortBy "ratingAsc")}} --}}
-    >
-      Rating
-      {{fa-icon "angle-up"}}
-    </LinkTo>
-    <LinkTo
-      @query={{hash s="titleDesc"}}
-      class="rr-sort-button"
-      data-test-rr="sort-by-title-desc"
-      {{!-- {{on "click" (fn this.updateSortBy "titleDesc")}} --}}
-    >
-      Title
-      {{fa-icon "angle-down"}}
-    </LinkTo>
-    <LinkTo
-      @query={{hash s="titleAsc"}}
-      class="rr-sort-button"
-      data-test-rr="sort-by-title-asc"
-      {{!-- {{on "click" (fn this.updateSortBy "titleAsc")}} --}}
-    >
-      Title
-      {{fa-icon "angle-up"}}
-    </LinkTo>
+      <option
+        value="ratingDesc"
+        data-test-rr="sort-by-rating-desc"
+        selected={{eq this.sortBy "ratingDesc"}}
+      >
+        By rating, descending
+      </option>
+      <option
+        value="ratingAsc"
+        data-test-rr="sort-by-rating-asc"
+        selected={{eq this.sortBy "ratingAsc"}}
+      >
+        By rating, ascending
+      </option>
+      <option
+        value="titleDesc"
+        data-test-rr="sort-by-title-desc"
+        selected={{eq this.sortBy "titleDesc"}}
+      >
+        By title, descending
+      </option>
+      <option
+        value="titleAsc"
+        data-test-rr="sort-by-title-desc"
+        selected={{eq this.sortBy "titleAsc"}}
+      >
+        By title, ascending
+      </option>
+    </select>
   </div>
   <div class="rr-search-panel">
     <Input
