convert the "model" to a list of songs

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -70,9 +70,9 @@
       </span>
     </li>
   {{else}}
-    <li class="tc">
+    <li class="tc rr-empty-message">
       No
-      {{capitalize this.model.name}}
+      {{capitalize this.band.name}}
       songs yet, why don't you
       <a href="#" {{on "click" this.addSong}}>
         create one?
