Paginating the list of songs - fetch pages of songs from the API by implementing "page[number]" param name - create a "pageNumber" property in query params in controller:songs - add pagination controls in template:songs - add two computed properties to controller:songs to implement the pagination links - create dec and inc helpers - move query params from controller:songs to route:songs - add "refreshModel" property and set it to "true" to rerun the model hook of route:songs

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -124,3 +124,25 @@
     </button>
   {{/if}}
 </div>
+<div class="rr-pagination-links">
+  {{#if this.hasPrevPage}}
+    <LinkTo
+      @query={{hash pageNumber=(dec this.pageNumber)}}
+      class="rr-pagination-prev"
+      data-test-rr="pagination-prev"
+    >
+      {{fa-icon "angle-left"}}
+      Prev
+    </LinkTo>
+  {{/if}}
+  {{#if this.hasNextPage}}
+    <LinkTo
+      @query={{hash pageNumber=(inc pageNumber)}}
+      class="rr-pagination-next"
+      data-test-rr="pagination-next"
+    >
+      Next
+      {{fa-icon "angle-right"}}
+    </LinkTo>
+  {{/if}}
+</div>
