make search icon button

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -44,9 +44,9 @@
       @value={{this.searchTerm}}
       data-test-rr="search-box"
     />
-    <div class="rr-search-icon">
+    <button class="rr-search-button">
       {{fa-icon "search"}}
-    </div>
+    </button>
   </div>
 </div>
 <ul class="rr-list">
