--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -12,6 +12,9 @@
           <span class="rr-pointer">
             {{fa-icon "angle-right"}}
           </span>
+          {{!-- <span class="rr-pointer" {{on "click" (fn this.deleteBand band)}}>
+            {{fa-icon "trash"}}
+          </span> --}}
         </LinkTo>
       </li>
     {{/each}}
