--- a/app/templates/bands/band.hbs
+++ b/app/templates/bands/band.hbs
@@ -10,6 +10,10 @@
         Songs
       </LinkTo>
     </li>
+    <button class="delete-band" {{on "click" (fn this.deleteBand this.model)}}>
+      {{fa-icon "trash"}}
+      Delete this band
+    </button>
   </ul>
 </nav>
 {{outlet}}
