--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -90,7 +90,7 @@
     <form
       class="rr-inline-form"
       data-test-rr="new-song-form"
-      {{on "submit" this.saveSong}}
+      {{on "submit" (perform this.saveSong)}}
     >
       <Input
         @type="text"
