--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -37,23 +37,7 @@
       {{fa-icon "angle-down"}}
     </LinkTo>
   </div>
-  <div class="rr-search-panel">
-    {{! template-lint-disable self-closing-void-elements }}
-    <input
-      type="text"
-      class="rr-input"
-      value={{this.searchTerm}}
-      data-test-rr="search-box"
-      {{on "input" (perform this.updateSearchTerm)}}
-    />
-    <button
-      type="button"
-      class="rr-search-button"
-      {{on "click" (perform this.updateSearchTerm null)}}
-    >
-      {{fa-icon "search"}}
-    </button>
-  </div>
+  <SearchPanel @value={{this.searchTerm}} @onChange={{this.updateSearchTerm}} />
 </div>
 <ul class="rr-list">
   {{#each this.model as |song|}}
