--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -17,6 +17,26 @@
   --flash-message-background-color: var(--blue);
 }
 
+.rr-secondary-button {
+  color: var(--mid-grey);
+  background-color: var(--near-white);
+  cursor: pointer;
+}
+
+.ember-power-select-option {
+  color: var(--input-color);
+}
+
+.ember-power-select-selected-item {
+  color: var(--input-color);
+  border: 1px solid gray;
+  border-radius: 4px;
+  color: #333;
+  background-color: #e4e4e4;
+  padding: 0 4px;
+  margin: 2px 0 2px 3px;
+}
+
 .rr-pagination-links {
   padding-left: 1rem;
   margin-top: 1em;
