Assign bands to a musician - add new markup to template:musicians/new and use ember-power-select addon for selecting a particular bands - fetch bands and set them to the list of all bands - initialize "selectedBands" as an empty array to hold the selected bands - create "updateSelectedBands" action to set "selectedBands" array to a list of bands - update the "bands" property on the musician record before saving

--- a/app/templates/musicians/new.hbs
+++ b/app/templates/musicians/new.hbs
@@ -25,6 +25,24 @@
         </div>
       {{/if}}
     </div>
+    <div class="rr-form-row">
+      <div class="mb2">
+        <label for="bands">
+          Bands
+        </label>
+      </div>
+      <div class="mb2">
+        <PowerSelectMultiple
+          @options={{this.bands}}
+          @selected={{this.selectedBands}}
+          @searchField="name"
+          @placeholder="Choose some bands"
+          @onChange={{this.updateSelectedBands}} as |band|
+        >
+          {{band.name}}
+        </PowerSelectMultiple>
+      </div>
+    </div>
     <div class="rr-form-footer">
       <div class="rr-button-panel">
         <button
