fix the current bands of the musician not having been assigned to the form(power-select)

--- a/app/templates/musicians/edit.hbs
+++ b/app/templates/musicians/edit.hbs
@@ -6,5 +6,6 @@
   <MusicianForm
     @musician={{this.model}}
     @afterSave={{this.goToMusicianDetails}}
+    @selectedBands={{this.selectedBands}}
   />
 </div>
