--- a/app/templates/musicians/new.hbs
+++ b/app/templates/musicians/new.hbs
@@ -2,5 +2,5 @@
   <h3 data-test-rr="form-header">
     New Musician
   </h3>
-  <MusicianForm @musician={{model}} @afterSave={{goToMusicianDetails}} />
+  <MusicianForm @musician={{this.model}} @afterSave={{goToMusicianDetails}} />
 </div>
